# avatar

./: .gitignore  CMakeLists.txt  ChangeLog  Copyright.txt  INSTALL.md  Makefile.in  Makefile.standalone  README.md  aclocal.m4  configure.ac.src-unit  configure.ac.src-unit-reg  configure.src-unit  configure.src-unit-reg  notes.txt  reconf  sample-cmake-configure-script  update_github.sh
cmake/: Avatar_config.h.in  Dependencies.cmake
data/: CtlRmData3.data  CtlRmData3.names
man/: CMakeLists.txt
man/man1/: CMakeLists.txt  Makefile.in  alt_filenames  avatar_args  avatar_opts  avatardt.1  avatarmpi.1  crossvalfc.1  data_inspector.1  diversity.1  ensemble_options  exodus_args  filenames  formats  general_opts  misc_options  output_options  proximity.1  skew  tree_opts
modules/: Makefile.standalone  array.c  array.h
python/: CMakeLists.txt  correlation-clustering  data-inspector  feature-correlation  setup.py
python/avatar/: data.py  ensemble.py  names.py
src/: CMakeLists.tribits.cmake  CMakeLists.txt  Makefile.in  Makefile.standalone  README  README_MPI  array.c  array.h  att_noising.c  att_noising.h  attr_stats.c  attr_stats.h  av_rng.c  av_rng.h  av_stats.c  av_stats.h  av_utils.c  av_utils.h  avatar_api.c  avatar_api.h  avatar_dt.c  avatar_dt.h  bagging.c  bagging.h  balanced_learning.c  balanced_learning.h  boost.c  boost.h  crossval.c  crossval.h  crossval_util.c  crossvalmpi.c  datatypes.h  displacements.c  displacements.h  distinct_values.c  distinct_values.h  dt.c  dtmpi.c  evaluate.c  (+46 more)
src/crossval.xcodeproj/: project.pbxproj
support/: Makefile.standalone  tutorial.tex
t/tree2dot/OpenDT/Data/: OpenDT-1.trees  OpenDT-3.trees
t/tree2dot/OpenDT/Truth/: OpenDT-1.trees-1.dot  OpenDT-2.trees-2.dot  OpenDT-2.trees-3.dot  OpenDT-2.trees-4.dot  OpenDT-3.trees-1.dot  OpenDT-3.trees-2.dot  OpenDT-3.trees-4.dot  OpenDT-4.trees-3.dot
t/tree2dot/USF/Data/: USF-1.trees  USF-3.trees
t/tree2dot/USF/Truth/: USF-1.trees-1.dot  USF-1.trees-2.dot  USF-1.trees-3.dot  USF-2.trees-0.dot  USF-4.trees-0.dot
tools/: CMakeLists.tribits.cmake  CMakeLists.txt  Makefile.in  Makefile.standalone  ccr2exo.c  compare_regions.c  connect_comp_regions.c  data_inspector  diversity.c  diversity_measures.c  diversity_measures.h  dup_nodes.c  extract-class-stats  gen_overlap_matrix.c  proximity.c  proximity_utils.c  proximity_utils.h  query_regions.c  remoteness.c  tree2dot  tree_stats.c
tools/tests/: sample.names  sample.trees
unittest/: CMakeLists.tribits.cmake  CMakeLists.txt  Makefile.in  TestStatus.txt  checkall.c  checkall.h  checkapi.c  checkarray.c  checkbagging.c  checkblearning.c  checkboost.c  checkcrossval_util.c  checkdistinct.c  checkdiversity.c  checkeval.c  checkgain.c  checkivote.c  checkknn.c  checkmajbagging.c  checkmissing.c  checkproximity.c  checkrwdata.c  checksmote.c  checktree.c  checkutil.c  util.c  util.h
unittest.tools/: Makefile.standalone  checkall.c  checkall.h  checkarrayutils.c  checkccregions.c  test_data.regions
unittest/data/: api_testing.data  api_testing.names  api_testing.trees  diversity_test.names  diversity_test.test  diversity_test.trees  diversity_test_kappa.truth  proximity_test.test  proximity_test.trees  smote_4d.data  smote_4d.names  smote_5d.data  smote_5d.names  smote_6d.data  smote_6d.names
